# salesforce-ai-workshops

./: .gitignore  PROBLEMS_FOUND.md  README.md  WORKSHOP1_PROGRESS.md  requirements.txt
deploy/ansible/: ansible.cfg
deploy/scripts/: deploy.sh
deploy/terraform/: network.tf  outputs.tf  providers.tf  servers.tf  variables.tf
devhub/: __init__.py  agent.py  config.py  devhub.py  pyproject.toml  requirements.txt
devhub/data/: docs.json  status.json  teams.json
devhub/scripts/: embed_svgs_in_notebook.py  fill_solutions.py  reshuffle_notebook.py  verify_all.py  verify_phase1_infra.py  verify_phase2_structure.py  verify_phase3_data.py  verify_phase4_vectordb.py  verify_phase5_teamdb.py  verify_phase6_statusapi.py  verify_phase7_agent.py  verify_phase8_cli.py
devhub/services/: __init__.py  status_api.py  team_db.py  vector_db.py
exercises/session_01/: session_01_observability.ipynb  session_01_observability.ipynb.backup
exercises/session_02/: session_02_testing.ipynb
exercises/session_04/: session_04_debugging.ipynb  session_04_debugging.ipynb.backup
exercises/session_05/: session_05_security.ipynb
exercises/session_06/: session_06_prompt_tdd.ipynb
scripts/: build_session4_notebook.py  build_session6_notebook.py  convert_to_svg.py  fill_session6_solutions.py
solutions/session_01/: session_01_observability_solutions.ipynb
solutions/session_02/: session_02_testing_solutions.ipynb
solutions/session_04/: session_04_debugging_solutions.ipynb
solutions/session_05/: session_05_security.ipynb
solutions/session_06/: session_06_prompt_tdd.ipynb
(+47 files in other folders)
