[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devhub"
version = "0.1.0"
description = "DevHub - Internal Developer Knowledge Assistant (Workshop Application)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Workshop Instructor"}
]
keywords = ["ai", "observability", "workshop", "opentelemetry"]

dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "deepeval>=0.21.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
devhub = "devhub.devhub:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devhub*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
